<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.navigation.Navigation"/>
        <import type="com.alesat1215.productsfromerokhin.R"/>
        <variable
            name="fragment"
            type="com.alesat1215.productsfromerokhin.more.MoreFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".more.MoreFragment">

            <Button
                android:id="@+id/tutorial_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start|center_vertical"
                android:onClick="@{Navigation.createNavigateOnClickListener(R.id.action_moreFragment_to_tutorialFragment)}"
                android:stateListAnimator="@null"
                android:text="@string/tutorial"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold"
                app:icon="@drawable/baseline_help_black_24dp"
                app:iconTint="@color/colorPrimary" />

            <Button
                android:id="@+id/about_products_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start|center_vertical"
                android:onClick="@{Navigation.createNavigateOnClickListener(R.id.action_moreFragment_to_aboutProductsFragment)}"
                android:stateListAnimator="@null"
                android:text="@string/about_products"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:icon="@drawable/baseline_store_black_24dp"
                app:iconTint="@color/colorPrimary" />

            <Button
                android:id="@+id/contacts_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start|center_vertical"
                android:onClick="@{Navigation.createNavigateOnClickListener(R.id.action_moreFragment_to_contactsFragment)}"
                android:stateListAnimator="@null"
                android:text="@string/contacts"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold"
                app:icon="@drawable/baseline_contacts_black_24dp"
                app:iconTint="@color/colorPrimary" />

            <Button
                android:id="@+id/share_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start|center_vertical"
                android:onClick="@{() -> fragment.share()}"
                android:stateListAnimator="@null"
                android:text="@string/share"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold"
                app:icon="@drawable/baseline_share_black_24dp"
                app:iconTint="@color/colorPrimary" />

            <Button
                android:id="@+id/about_app_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:gravity="start|center_vertical"
                android:onClick="@{Navigation.createNavigateOnClickListener(R.id.action_moreFragment_to_aboutAppFragment)}"
                android:stateListAnimator="@null"
                android:text="@string/about_app"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textStyle="bold"
                app:icon="@drawable/baseline_android_black_24dp"
                app:iconTint="@color/colorPrimary" />
        </LinearLayout>

    </ScrollView>
</layout>