<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".aboutapp.AboutAppFragment">

    <data>
        <import type="android.view.View" />
        <import type="com.alesat1215.productsfromerokhin.BuildConfig" />
        <variable
            name="fragment"
            type="com.alesat1215.productsfromerokhin.aboutapp.AboutAppFragment" />
        <variable
            name="viewModel"
            type="com.alesat1215.productsfromerokhin.aboutapp.AboutAppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{BuildConfig.VERSION_NAME}"
            android:textSize="18sp"
            tools:text="App version" />

        <Button
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="#00FFFFFF"
            android:onClick="@{() -> fragment.privacy()}"
            android:stateListAnimator="@null"
            android:text="@string/privacy_policy"
            android:textColor="@color/common_google_signin_btn_text_light" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:backgroundTint="#00FFFFFF"
            android:stateListAnimator="@null"
            android:onClick="@{() -> fragment.update()}"
            android:text="@string/update"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:visibility="@{viewModel.aboutApp.versionCode > BuildConfig.VERSION_CODE ? View.VISIBLE : View.GONE}" />

    </LinearLayout>
</layout>
