<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
        name="data"
        type="com.alesat1215.productsfromerokhin.data.local.Product" />
  </data>

  <androidx.cardview.widget.CardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardCornerRadius="10dp"
      app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


      <androidx.cardview.widget.CardView
          android:id="@+id/productImageContainer_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:cardCornerRadius="10dp"
          app:cardElevation="0dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/name_start">

        <ImageView
            android:id="@+id/productImage_start"
            android:layout_width="120dp"
            android:layout_height="97dp"
            android:contentDescription="@string/product_image_description"
            android:scaleType="fitXY"
            app:fb_image="@{data.img}"
            tools:src="@tools:sample/avatars" />
      </androidx.cardview.widget.CardView>

      <TextView
          android:id="@+id/name_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{data.name ?? ``}"
          android:textSize="18sp"
          android:textStyle="bold"
          app:autoSizeTextType="uniform"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="@tools:sample/full_names" />

      <androidx.cardview.widget.CardView
          android:id="@+id/priceContainer_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          app:cardBackgroundColor="?attr/colorButtonNormal"
          app:cardCornerRadius="10dp"
          app:contentPadding="8dp"
          app:layout_constraintStart_toEndOf="@+id/productImageContainer_start"
          app:layout_constraintTop_toTopOf="@+id/productImageContainer_start">

        <TextView
            android:id="@+id/price_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{(data.price.toString() ?? ``) + ' ' + @string/rub_kg}"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="250 ₽/kg" />
      </androidx.cardview.widget.CardView>

      <ImageButton
          android:id="@+id/del_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:background="#FFFFFF"
          android:contentDescription="@string/del_button_description"
          app:layout_constraintBottom_toBottomOf="@+id/productImageContainer_start"
          app:layout_constraintStart_toEndOf="@+id/productImageContainer_start"
          app:srcCompat="@android:drawable/ic_menu_add" />

      <TextView
          android:id="@+id/count_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="@+id/del_start"
          app:layout_constraintStart_toEndOf="@+id/del_start"
          app:layout_constraintTop_toTopOf="@+id/del_start"
          tools:text="5" />

      <ImageButton
          android:id="@+id/add_start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:background="#FFFFFF"
          android:contentDescription="@string/add_button_description"
          app:layout_constraintBottom_toBottomOf="@+id/productImageContainer_start"
          app:layout_constraintStart_toEndOf="@+id/count_start"
          app:srcCompat="@android:drawable/ic_menu_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</layout>
